--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -19,8 +19,13 @@
                 <td>{{article.title}}</td>
                 <td>{{article.author}}</td>
                 <td>{{article.create_date}}</td>
-                <td><a href="edit_article/{{article.id}}" class="btn btn-default pullright">Edit</a></td>
-                <td><a href="#" class="btn btn-danger pullright">Delete</a></td>
+                <td><a href="edit_article/{{article.ID}}" class="btn btn-default pullright">Edit</a></td>
+                <td>
+                    <form class="" action="{{url_for('delete_article', id=article.ID)}}" method="POST">
+                        <input type="hidden" name="_method" value="DELETE">
+                        <input type="submit" name="" value="Delete" class="btn btn-danger">
+                    </form>
+                </td>
             </tr>
         {% endfor %}
     </table>
